--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,30 @@
     <string name="action_sign_in_short">Sign in</string>
     <string name="welcome">"Welcome !"</string>
     <string name="invalid_username">Not a valid username</string>
-    <string name="invalid_password">Password must be >5 characters</string>
+    <string name="invalid_password">Password must be >8 characters</string>
     <string name="login_failed">"Login failed"</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="cosplay_akatsuki_naruto_geek">#cosplay #akatsuki #naruto #geek</string>
+    <string name="name">lullydark</string>
+    <string name="date">1 sec ago</string>
+    <string name="logo">Logo</string>
+    <string name="image_profile">image profile</string>
+    <string name="image_post">Image post</string>
+    <string name="icon_like">Icon Like</string>
+    <string name="icon_comment">Icon Comment</string>
+    <string name="icon_share">Icon Share</string>
+    <string name="search">Search</string>
+    <string name="home">Home</string>
+    <string name="profile">Profile</string>
+    <string name="notifictaion">Notification</string>
+    <string name="bpost">Post</string>
+    <string name="log_in">Log in</string>
+    <string name="password">Password</string>
+    <string name="email">Email</string>
+    <string name="english_us">English (US)</string>
+    <string name="Logo">Logo</string>
+    <string name="forgot_password">Forgot password?</string>
+    <string name="create_new_account">Create new account</string>
+    <string name="company_logo">Company Logo</string>
 </resources>
