completed create auth logic and layout

--- a/app/src/main/res/values-land/strings.xml
+++ b/app/src/main/res/values-land/strings.xml
@@ -7,6 +7,9 @@
     <string name="image_profile">image profile</string>
     <string name="image_post">Image post</string>
     <string name="icon_like">Icon Like</string>
+    <string name="invalid_email_error">Invalid email address</string>
+    <string name="invalid_password_error">Password must be at least 6 characters</string>
+    <string name="toggle_password_visibility">Toggle password visibility</string>
     <string name="icon_comment">Icon Comment</string>
     <string name="icon_share">Icon Share</string>
     <string name="search">Search</string>
@@ -22,4 +25,11 @@
     <string name="forgot_password">Forgot password?</string>
     <string name="create_new_account">Create new account</string>
     <string name="company_logo">Company Logo</string>
+    <string name="usernames">Name</string>
+    <string name="invalid_name_error">name must not blank</string>
+    <string name="register">Sign Up</string>
+    <string name="have_an_account_login">have an account? Login</string>
+    <string name="error_name_required">Name is required</string>
+    <string name="error_email_required">Email is required</string>
+    <string name="error_password_required">Password is required</string>
 </resources>
