--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,10 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="cosplay_akatsuki_naruto_geek">#cosplay #akatsuki #naruto #geek</string>
+    <string name="invalid_email_error">Invalid email address</string>
+    <string name="invalid_password_error">Password must be at least 6 characters</string>
+    <string name="toggle_password_visibility">Toggle password visibility</string>
+    <string name="toggle_password_visibility_off">Toggle password visibility</string>
     <string name="name">lullydark</string>
     <string name="date">1 sec ago</string>
     <string name="logo">Logo</string>
@@ -33,4 +37,11 @@
     <string name="forgot_password">Forgot password?</string>
     <string name="create_new_account">Create new account</string>
     <string name="company_logo">Company Logo</string>
+    <string name="usernames">Name</string>
+    <string name="invalid_name_error">name must not blank</string>
+    <string name="register">Sign Up</string>
+    <string name="have_an_account_login">have an account? Login</string>
+    <string name="error_name_required">Name is required</string>
+    <string name="error_email_required">Email is required</string>
+    <string name="error_password_required">Password is required</string>
 </resources>
