finished bug fixed camera, call api stories and create pagingadapter

--- a/app/src/main/res/values-land/strings.xml
+++ b/app/src/main/res/values-land/strings.xml
@@ -47,4 +47,5 @@
     <string name="what_s_new">What\'s new?</string>
     <string name="whats_new">What\'s new?</string>
     <string name="preview_image">Preview Image</string>
+    <string name="add_camera">Add Camera</string>
 </resources>
