success create post

--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -47,4 +47,6 @@
     <string name="whats_new">What\'s new?</string>
     <string name="preview_image">Preview Image</string>
     <string name="add_camera">Add Camera</string>
+    <string name="download_image">Download Image</string>
+    <string name="download">Download</string>
 </resources>
