--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -49,4 +49,17 @@
     <string name="add_camera">Add Camera</string>
     <string name="download_image">Download Image</string>
     <string name="download">Download</string>
+    <string name="_700">700</string>
+    <string name="_500">500</string>
+    <string name="following">Following</string>
+    <string name="followers">followers</string>
+    <string name="username" />
+    <string name="settings">Settings</string>
+    <string name="share">Share</string>
+    <string name="bio">Bio</string>
+    <string name="tab_stories">bstories</string>
+    <string name="bacot">Bacot</string>
+    <string name="apperance">Apperance</string>
+    <string name="drk_light"><![CDATA[Dark & Light]]></string>
+    <string name="logout">Logout</string>
 </resources>
