--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -62,4 +62,5 @@
     <string name="apperance">Apperance</string>
     <string name="drk_light"><![CDATA[Dark & Light]]></string>
     <string name="logout">Logout</string>
+    <string name="design">Design</string>
 </resources>
